# my_ai_project

./: code.ipynb  pyproject.toml  requirements.txt
